# fasem-robot

./: .gitignore  readme.md  test_emergency.py
src/fasem/: CMakeLists.txt  package.xml
src/fasem/config/: params_husky.yaml  params_sim.yaml
src/fasem/launch/: camera.launch.py  control.launch.py  husky.launch.py  sim.launch.py
src/utils/autonomous_exploration/: package.xml  setup.py
src/utils/autonomous_exploration/autonomous_exploration/: backup.py  control.py  watcher.py
src/utils/autonomous_exploration/config/: params.yaml
src/utils/gmapper/: CMakeLists.txt  package.xml
src/utils/gmapper/include/gmapper/: mapper.h
src/utils/gmapper/src/: semap.cpp
src/utils/merger/: package.xml  setup.cfg  setup.py
src/utils/merger/merger/: map_rebroadcaster.py  watcher.py
src/utils/rebroadcast/: package.xml  setup.cfg  setup.py
src/utils/rebroadcast/rebroadcast/: gmapper.py  odom.py  scan.py  scandom.py  teleop.py
src/utils/segmentation/: package.xml  setup.py
src/utils/segmentation/segmentation/: hazard.py  segmentation.py  segmentation_subscriber_example.py
src/utils/segmentation_interfaces/: CMakeLists.txt  package.xml
src/utils/segmentation_interfaces/msg/: SegmentationResult.msg
src/utils/slam_toolbox/: CMakeLists.txt  package.xml
src/utils/slam_toolbox/config/: mapper_params_online_async.yaml  mapper_params_online_sync.yaml
src/utils/slam_toolbox/include/slam_toolbox/: slam_toolbox_common.hpp  visualization_utils.hpp
src/utils/slam_toolbox/lib/karto_sdk/src/: Karto.cpp
src/utils/slam_toolbox/src/: slam_toolbox_async.cpp  slam_toolbox_common.cpp
src/utils/topic_source/husky/ros_deep_learning/: CMakeLists.txt
src/utils/topic_source/husky/ros_deep_learning/launch/: camera.launch  camera_launch.py  camera_multi.launch  image_merger.launch  multi_camera_display.py  video_source.ros1.launch  video_source.ros2.launch  video_source.ros2_multi.launch  video_source.ros2v2.launch  video_source_multi.launch  video_viewer.ros1.launch
src/utils/topic_source/husky/ros_deep_learning/src/: image_merger.py  image_stitcher.cpp  image_stitcher.py
src/utils/topic_source/sim/fasem_sim/: CMakeLists.txt  package.xml
src/utils/topic_source/sim/fasem_sim/launch/: callibrate_cam.launch.py  can.launch.py  spawn_turtlebot3.launch.py  turtlebot3_dqn_stage2.launch.py
src/utils/topic_source/sim/fasem_sim/models/turtlebot3_burger/: model.sdf
src/utils/topic_source/sim/fasem_sim/models/turtlebot3_custom/: model.config
src/utils/topic_source/sim/fasem_sim/models/turtlebot3_high/: model.config  model.sdf
src/utils/topic_source/sim/fasem_sim/models/turtlebot3_husky/: model.config  model.sdf
src/utils/topic_source/sim/fasem_sim/models/turtlebot3_multicam/: model.sdf  model_backup.sdf
src/utils/topic_source/sim/fasem_sim/models/turtlebot3_sacr/: model.config
src/utils/topic_source/sim/fasem_sim/urdf/: turtlebot3_multicam_old.urdf
src/utils/topic_source/sim/fasem_sim/worlds/: cafe.world  callibrate_angle.world  callibrate_cam.world  frontier-2.world
src/utils/topic_source/sim/fasem_teleop/: setup.cfg
src/utils/topic_source/sim/lictic_sim/launch/: cafe.launch.py  callibrate_angle.launch.py  empty_world.launch.py  frontier.launch.py  lictic.launch.py  robot_state_publisher.launch.py  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage3.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
src/utils/topic_source/sim/lictic_sim/urdf/: turtlebot3_custom.urdf  turtlebot3_high.urdf  turtlebot3_husky2.urdf  turtlebot3_multicam.urdf
src/utils/topic_source/sim/lictic_teleop/: package.xml  setup.py
src/utils/visual/: package.xml  setup.py
src/utils/visual/visual/: data_visualizer.py  data_writer.py  kivymap.py  kivymapd.py  kvnode.py  qtnode.py  qtvid.py  tknode.py
src/utils/yolosed/: package.xml  setup.cfg  setup.py
src/utils/yolosed/yolosed/: detectsegment.py  hazard.py  segmentation.py  watch.py
support/evaluator/: eval.py  eval.yaml
support/husky/src/relay/: package.xml  setup.cfg  setup.py
support/husky/src/relay/relay/: odom.py
support/openslam_gmapping/gridfastslam/: gridslamprocessor.cpp
support/openslam_gmapping/include/gmapping/gridfastslam/: gridslamprocessor.hxx
support/openslam_gmapping/include/gmapping/scanmatcher/: scanmatcher.h  smmap.h
support/openslam_gmapping/scanmatcher/: scanmatcher.cpp  scanmatcherprocessor.cpp
(+13 files in other folders)
