<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fasem_teleop</name>
  <version>0.0.0</version>
  <description>
    Teleoperation node using keyboard for Fasem.
  </description>
  <maintainer email="salamp@salamp.id">LamP</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/Robotic-System-Lab/Fasem-360</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
